<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context="com.example.kontrol.plan.activities.NewPlanActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceLarge"
        android:text="@string/planName_tag"
        android:labelFor="@string/planName_tag"/>

    <EditText
        android:id="@+id/et_newGroup_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:hint="@string/et_name_hint"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceLarge"
        android:text="@string/dateTime_tag"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_sameDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tag_sameday"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/rb_oneDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tag_oneday"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/rb_twoDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tag_twoday"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/rb_threeDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tag_threeday"
            android:onClick="onRadioButtonClicked"/>

    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceLarge"
            android:text="@string/addMemebers_tag"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_newGroup_addMembers"
            android:src="@drawable/ic_add_circle_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="addMembers"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/tag_add_members"/>
    </LinearLayout>

</LinearLayout>
