<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/custom_dialog_layout_design_user_input"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tag_dialog_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/db_hours"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tag_hours"
        android:inputType="number" />

    <EditText
        android:id="@+id/db_minutes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tag_minutes"
        android:inputType="number" />


</LinearLayout>